# raytracer

./: .gitignore  FeatureList.txt  README.md  System.txt  pdf_style.css
ASCII/: scene.txt  scene2.txt
ASCII/BVH_tests/: scene.txt  scene_11.txt  scene_20.txt  scene_23.txt  scene_24.txt  scene_25.txt  scene_28.txt  scene_29.txt  scene_33.txt  scene_41.txt  scene_44.txt  scene_46.txt  scene_47.txt  scene_48.txt  scene_5.txt  scene_60.txt  scene_68.txt  scene_76.txt  scene_8.txt  scene_81.txt  scene_83.txt  scene_85.txt  scene_95.txt  scene_99.txt
ASCII/examples/M2/: config_green.json  config_white.json  flags.txt  scene_green.txt
ASCII/examples/M2/bvh_tests/: no_bvh_test.txt
ASCII/examples/M3/: flags.txt
ASCII/examples/M3/basic/: flags.txt
ASCII/examples/M3/fresnel/: config.json  flags.txt  fresnel_cube.txt
ASCII/examples/M3/refraction_reflection/: flags.txt
ASCII/examples/exceptionality/backgrounds/: background.txt  config.json
ASCII/examples/exceptionality/displacement_mapping/: flags.txt
ASCII/examples/exceptionality/exposure/: exposure.txt
ASCII/examples/exceptionality/metal/: flags.txt
ASCII/examples/final/dof/: dof.txt
ASCII/examples/gallery/bike/: bike.txt
ASCII/examples/gallery/shapes/: shapes.txt
Blend/: Export.py
Code/: CMakeLists.txt  HDRImage.h  Image.cpp  Image.h  bp.txt  camera.cpp  camera.cu  camera.h  config.cpp  config.h  config.json  device_types.cuh  image.cpp  image.h  kernel.cuh  light.h  main.cpp  main.cu  material.h  matrix4x4.cpp  matrix4x4.cu  random_utils.h  ray.h  scene.cpp  scene.cu  scene.h  scene_parser.h  shading.h  test_rays_image.cpp  test_rays_image.h  tracer.h  vector2.h  vector3.cpp  vector3.h
Code/acceleration/: aabb.cpp  aabb.h  bvh.cpp  bvh.cu  bvh.h
Code/environment/: HDRImage.cpp  HDRImage.h  camera.cpp  camera.h  light.h
Code/shapes/: complex_cube.cpp  complex_cube.h  complex_plane.cpp  complex_plane.h  complex_sphere.cpp  complex_sphere.h  cube.cpp  cube.cu  cube.h  hittable.h  hittable_list.cpp  hittable_list.cu  hittable_list.h  material.h  plane.cpp  plane.h  sphere.cpp  sphere.cu  sphere.h  transformed_shape.h
Code/utilities/: Image.cpp  Image.h  matrix4x4.cpp  matrix4x4.h  ray.h  scene.cpp  scene.h  shading.h  tracer.h  vector2.h  vector3.h
Output/: image_converter.py
Output/examples/M1/: scene.txt
Output/examples/M2/: scene.txt  scene_white.txt
Output/examples/M2/bvh_tests/: bvh_test.txt
Output/examples/M3/Textures/: textures_cube.blend  textures_cube.txt  textures_plane.blend  textures_sphere.blend
Output/examples/M3/anti_aliasing/: flags.txt
Output/examples/M3/basic/: basic.txt  basic_whitted.txt  config.json  whitted.blend
Output/examples/M3/fresnel/: fresnel.blend  fresnel.txt  fresnel_cube.txt
Output/examples/M3/refraction_reflection/: reflection_refraction.blend  reflection_refraction.blend1  (+2 more)
Output/testing/2025-11-20_17-05-22/: readme.txt
Report/examples/M3/: anti_aliasing.blend  anti_aliasing.txt  basic_whitted.txt  flags.txt  fresnel.blend  reflection_refraction.blend  whitted.blend1
Report/examples/final/: soft_shadows.blend
Report/examples/refraction_reflection/: scene.txt
Textures/: checker_board_gradient.ppm
(+125 files in other folders)
